CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(rospro)
add_subdirectory(rosconsole/)
add_subdirectory(roscpp/)
add_subdirectory(roscpp_serialization/)
add_subdirectory(cpp_common/)
add_subdirectory(rostime/)
add_subdirectory(xmlrpcpp/)
add_subdirectory(rosbag_storage/)
add_subdirectory(thirdparty/console_bridge)